--- a/todolist/src/components/templates/RegisterField.css
+++ b/todolist/src/components/templates/RegisterField.css
@@ -6,7 +6,11 @@
     width: 15ch;
     border: 15px;
     left: 20px;
-    border: none;
+    outline: none;
+}
+
+.button:active {
+    outline: none;
 }
 
 .text-field {
