general tasks, playing with json-server on methods get, put and post

--- a/todolist/src/index.css
+++ b/todolist/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'RobotoMono';
-  src: url('./fonts/RobotoMono-Thin.ttf');
+  src: url('./fonts/RobotoMono-Light.ttf');
 }
 
 * {
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   justify-content: center;
   text-align: center;
+  
 
   color: black;
   background-image: linear-gradient(to right bottom, #ffffff, #efeff2, #e0e0e5, #cfd1d8, #bfc2cc, #b2b7c1, #a4acb5,
