Finalizando back-end, ajustando docker-compose para iniciar o json-server e alterações gerais no front-end

--- a/todolist/src/list/ListCrud.css
+++ b/todolist/src/list/ListCrud.css
@@ -1,3 +1,9 @@
-#finalizado {
+#finishButton {
     width: 132.42px;
+}
+
+#finish {
+    background-color: #6c757d;
+    font-weight: bold;
+    border-radius: 10px;
 }
